package ethanjones.cubes.world.generator;

import ethanjones.cubes.block.Blocks;
import ethanjones.cubes.world.reference.BlockReference;
import ethanjones.cubes.world.server.WorldServer;
import ethanjones.cubes.world.storage.Area;

public final class TestTerrainGenerator extends TerrainGenerator {
  @Override
  protected void generateTerrain(Area area) {
    if (area.areaX != 0 || area.areaZ != 0) return;

    for (int x = 0; x < Area.SIZE_BLOCKS; x++) {
      for (int y = 0; y < Area.SIZE_BLOCKS; y++) {
        for (int z = 0; z < Area.SIZE_BLOCKS; z++) {
          if (y % 2 == 0) {
            if (x % 2 == 0) {
              if (z % 2 == 0) set(area, Blocks.grass, x, y, z, 0);
            } else {
              if (z % 2 == 1) set(area, Blocks.grass, x, y, z, 0);
            }
          } else {
            if (x % 2 == 1) {
              if (z % 2 == 0) set(area, Blocks.grass, x, y, z, 0);
            } else {
              if (z % 2 == 1) set(area, Blocks.grass, x, y, z, 0);
            }
          }
        }
      }
    }
  }

  // No features overridden - uses default empty implementations

  @Override
  public BlockReference spawnPoint(WorldServer world) {
    return new BlockReference().setFromBlockCoordinates(0, 32, 0);
  }
}
